# substrate-rest-api

./: Cargo.toml  README.md  metadata.scale
src/: config.rs  main.rs
src/routes/: blocks.rs
